--- a/README.textile
+++ b/README.textile
@@ -183,7 +183,7 @@ This application checks the similarity of two files. The percentage returned ind
 
 Note that this operation is performed in memory. Nothing changes on disk.
 
-h2(#test). Panako test run and output
+h2(#test). Testing Panako 
 
 There is a script provided to quickly test Panako with a small dataset. Note that you might need a new shell environment to use @panako@. To download the dataset you also need SoX and wget on your system.
 
@@ -236,6 +236,10 @@ To interpret the results, it helps to explain the output:
 For the test queries the start of the match is encoded into the filename. Likewise for the speed-up factor and matching identifier. For example @queries/557132_97_104.wav@ expects to match the file with identifier @557132@ starting from second 97 at a speed up of 104%. When looking at the result this closely matches what is reported.
 
 See below for a "full evaluation of Panako":#eval. The evaluation tests retrieval rates for various factors of pitch-shifting, time-stretching, speed-up and some audio effects.
+
+h2(#test). Benchmarking Panako 
+
+To get an idea on the speed and scalability of panako, there is a "benchmark script":./resources/scripts/benchmark/benchmark.rb and some more "information on benchmarking panako and how to run the benchmark yourself":./resources/scripts/benchmark/benchmark.textile.
 
 h2(#docker). Panako and Docker 
 
